[gd_scene load_steps=69 format=3 uid="uid://dw2alfxkis0xn"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_7ftak"]
[ext_resource type="Texture2D" uid="uid://dwl3xh4ua1kjj" path="res://b.png" id="1_f36ar"]
[ext_resource type="Texture2D" uid="uid://bkgp6eafuqkfs" path="res://c.png" id="2_4f2i2"]
[ext_resource type="Texture2D" uid="uid://ktl064ab6gik" path="res://layer1.png" id="2_my854"]
[ext_resource type="Script" path="res://Button.gd" id="2_wq0s5"]
[ext_resource type="Texture2D" uid="uid://bbl7651g6jjhr" path="res://m.png" id="2_y5ypf"]
[ext_resource type="Script" path="res://Button2.gd" id="4_cbich"]
[ext_resource type="PackedScene" uid="uid://dbfcxlni1lhmk" path="res://sett.tscn" id="5_5cpq2"]
[ext_resource type="Texture2D" uid="uid://vww7gte6jgr0" path="res://e.png" id="5_468ep"]
[ext_resource type="Texture2D" uid="uid://c6xu6p5v82irf" path="res://d.png" id="5_nfwt8"]
[ext_resource type="Texture2D" uid="uid://t8fcpv17kan" path="res://k.png" id="7_5vfsj"]
[ext_resource type="Texture2D" uid="uid://hbwo2bvo4l3y" path="res://l.png" id="7_ggnod"]
[ext_resource type="Script" path="res://Panel3.gd" id="8_rnudj"]
[ext_resource type="Texture2D" uid="uid://6u50ib5os0x3" path="res://layer2.png" id="8_uqui3"]
[ext_resource type="Texture2D" uid="uid://d32vcvm21m0ts" path="res://layer3.png" id="9_q7g82"]
[ext_resource type="Texture2D" uid="uid://spashu30is7j" path="res://layer4.png" id="11_tdn0k"]

[sub_resource type="LabelSettings" id="LabelSettings_auhf4"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sb5m"]
atlas = ExtResource("8_uqui3")
region = Rect2(0, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_75yp6"]
atlas = ExtResource("8_uqui3")
region = Rect2(26, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pj5q"]
atlas = ExtResource("8_uqui3")
region = Rect2(52, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_lglt2"]
atlas = ExtResource("8_uqui3")
region = Rect2(78, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrqio"]
atlas = ExtResource("8_uqui3")
region = Rect2(104, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_68023"]
atlas = ExtResource("8_uqui3")
region = Rect2(130, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfror"]
atlas = ExtResource("8_uqui3")
region = Rect2(156, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7byuv"]
atlas = ExtResource("8_uqui3")
region = Rect2(182, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hukr4"]
atlas = ExtResource("8_uqui3")
region = Rect2(0, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qlbn"]
atlas = ExtResource("8_uqui3")
region = Rect2(26, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnt6w"]
atlas = ExtResource("8_uqui3")
region = Rect2(52, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar2o4"]
atlas = ExtResource("8_uqui3")
region = Rect2(78, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_px06h"]
atlas = ExtResource("8_uqui3")
region = Rect2(104, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dhy1"]
atlas = ExtResource("8_uqui3")
region = Rect2(130, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_yatwp"]
atlas = ExtResource("8_uqui3")
region = Rect2(156, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl8dt"]
atlas = ExtResource("9_q7g82")
region = Rect2(0, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlhdd"]
atlas = ExtResource("9_q7g82")
region = Rect2(26, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwlq8"]
atlas = ExtResource("9_q7g82")
region = Rect2(52, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm6k4"]
atlas = ExtResource("9_q7g82")
region = Rect2(78, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qwpl"]
atlas = ExtResource("9_q7g82")
region = Rect2(104, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o0wv"]
atlas = ExtResource("9_q7g82")
region = Rect2(130, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhu00"]
atlas = ExtResource("9_q7g82")
region = Rect2(156, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h8uq"]
atlas = ExtResource("9_q7g82")
region = Rect2(182, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_203eg"]
atlas = ExtResource("9_q7g82")
region = Rect2(208, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1pnj"]
atlas = ExtResource("9_q7g82")
region = Rect2(0, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_4itkr"]
atlas = ExtResource("9_q7g82")
region = Rect2(26, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_th8pt"]
atlas = ExtResource("9_q7g82")
region = Rect2(52, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hyll"]
atlas = ExtResource("9_q7g82")
region = Rect2(78, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_amon1"]
atlas = ExtResource("9_q7g82")
region = Rect2(104, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_abvki"]
atlas = ExtResource("9_q7g82")
region = Rect2(130, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkw06"]
atlas = ExtResource("9_q7g82")
region = Rect2(156, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1x6i"]
atlas = ExtResource("9_q7g82")
region = Rect2(182, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3hsh"]
atlas = ExtResource("9_q7g82")
region = Rect2(208, 33, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd64q"]
atlas = ExtResource("2_my854")
region = Rect2(0, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_26qfh"]
atlas = ExtResource("2_my854")
region = Rect2(26, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nmch"]
atlas = ExtResource("2_my854")
region = Rect2(52, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyx7u"]
atlas = ExtResource("2_my854")
region = Rect2(78, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_x820f"]
atlas = ExtResource("2_my854")
region = Rect2(104, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_yixps"]
atlas = ExtResource("2_my854")
region = Rect2(130, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee3l1"]
atlas = ExtResource("2_my854")
region = Rect2(156, 0, 26, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxj8i"]
atlas = ExtResource("11_tdn0k")
region = Rect2(0, 0, 26, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy0xr"]
atlas = ExtResource("11_tdn0k")
region = Rect2(26, 0, 26, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3v2l"]
atlas = ExtResource("11_tdn0k")
region = Rect2(52, 0, 26, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf1hb"]
atlas = ExtResource("11_tdn0k")
region = Rect2(78, 0, 26, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3yds"]
atlas = ExtResource("11_tdn0k")
region = Rect2(104, 0, 26, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2ysh"]
atlas = ExtResource("11_tdn0k")
region = Rect2(130, 0, 26, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkqmt"]
atlas = ExtResource("11_tdn0k")
region = Rect2(156, 0, 26, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5pox"]
atlas = ExtResource("11_tdn0k")
region = Rect2(182, 0, 26, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_f7olg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sb5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75yp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pj5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lglt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrqio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68023")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfror")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7byuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hukr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qlbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnt6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar2o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px06h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dhy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yatwp")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl8dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlhdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwlq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm6k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qwpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o0wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhu00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h8uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_203eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1pnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4itkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th8pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hyll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amon1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abvki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkw06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1x6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3hsh")
}],
"loop": false,
"name": &"eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd64q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26qfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nmch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyx7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x820f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yixps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee3l1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxj8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy0xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3v2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf1hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3yds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2ysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkqmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5pox")
}],
"loop": true,
"name": &"play",
"speed": 7.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vtks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ge6mc"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_7ftak")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_bottom = 92.0
grow_horizontal = 0
icon = ExtResource("1_f36ar")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("2_wq0s5")

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 82.0
offset_bottom = 82.0
icon = ExtResource("2_4f2i2")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("4_cbich")

[node name="Control" parent="CanvasLayer/Control" instance=ExtResource("5_5cpq2")]
visible = false
layout_mode = 1
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0

[node name="Button3" type="Button" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -59.0
offset_right = 59.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("7_ggnod")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
visible = false
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Покормить"

[node name="Button2" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Поиграть"

[node name="Control2" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/Control/Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 48.0
offset_right = 17.0
offset_bottom = 106.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/Control2/VSplitContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Control2/VSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Control2/VSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/Control/Control2/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "id:"

[node name="Label" type="Label" parent="CanvasLayer/Control/Control2/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_right = 37.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Профиль"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_left = 340.0
offset_top = 13.0
offset_right = 775.0
offset_bottom = 235.0

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/Control/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel2/VSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel2/VSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel2/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Вопрос"

[node name="Label2" type="Label" parent="CanvasLayer/Control/Panel2/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "1/5"

[node name="Label2" type="RichTextLabel" parent="CanvasLayer/Control/Panel2/VSplitContainer/VBoxContainer"]
layout_mode = 2
fit_content = true

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/Control/Panel2/VSplitContainer/VBoxContainer"]
layout_mode = 2
text_overrun_behavior = 3
clip_text = true
fit_to_longest_item = false

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel2/VSplitContainer"]
visible = false
layout_mode = 2
text = "Неправильный ответ"
label_settings = SubResource("LabelSettings_auhf4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/Panel2/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "ок"

[node name="Panel3" type="Panel" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_left = 458.0
offset_top = 94.0
offset_right = 704.0
offset_bottom = 240.0
script = ExtResource("8_rnudj")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 13.0
offset_right = -25.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
text = "Ваш питоме съел что-то не то и отравился "

[node name="Button" type="Button" parent="CanvasLayer/Control/Panel3"]
layout_mode = 0
offset_left = 49.0
offset_top = 88.0
offset_right = 193.0
offset_bottom = 138.0
text = "ок"

[node name="M" type="Sprite2D" parent="."]
position = Vector2(611, -116)
scale = Vector2(7.06299, 6.475)
texture = ExtResource("2_y5ypf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(571, 358.438)
scale = Vector2(4.8189, 5.00379)
sprite_frames = SubResource("SpriteFrames_f7olg")
animation = &"death"

[node name="CanvasLayer" type="CanvasLayer" parent="AnimatedSprite2D"]

[node name="Button" type="Button" parent="AnimatedSprite2D/CanvasLayer"]
offset_left = 520.0
offset_top = 274.0
offset_right = 624.0
offset_bottom = 446.0
theme_override_styles/hover = SubResource("StyleBoxEmpty_0vtks")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ge6mc")
flat = true

[node name="E" type="Sprite2D" parent="."]
position = Vector2(174, 540.5)
scale = Vector2(7, 8.369)
texture = ExtResource("5_468ep")

[node name="D" type="Sprite2D" parent="."]
position = Vector2(320, 536)
scale = Vector2(8.57143, 8.57143)
texture = ExtResource("5_nfwt8")

[node name="K" type="Sprite2D" parent="."]
position = Vector2(678.5, 540)
scale = Vector2(7.00003, 8.44444)
texture = ExtResource("7_5vfsj")

[node name="D3" type="Sprite2D" parent="."]
position = Vector2(824, 536)
scale = Vector2(8.57143, 8.57143)
texture = ExtResource("5_nfwt8")

[node name="Timer" type="Timer" parent="."]
wait_time = 500.0
autostart = true

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(606, 500)
ok_button_text = "Открыть"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg ; Supported Images")
show_hidden_files = true

[connection signal="pressed" from="CanvasLayer/Control/Button" to="CanvasLayer/Control/Button" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="CanvasLayer/Control/Button2" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button3" to="." method="_on_button_retry_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/HBoxContainer/Button" to="." method="_on_feed_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/HBoxContainer/Button2" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel2/VSplitContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel2/VSplitContainer/Button" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel3/Button" to="CanvasLayer/Control/Panel3" method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="AnimatedSprite2D/CanvasLayer/Button" to="." method="_on_action_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
